# audioipc-2

./: Cargo.toml
audioipc/: Cargo.toml
audioipc/src/: async_msg.rs  cmsg.rs  codec.rs  core.rs  fd_passing.rs  frame.rs  handle_passing.rs  lib.rs  messagestream_unix.rs  messagestream_win.rs  msg.rs  tokio_uds_stream.rs
audioipc/src/rpc/: driver.rs  mod.rs  server.rs
audioipc/src/rpc/client/: mod.rs  proxy.rs
client/: Cargo.toml
client/src/: context.rs  send_recv.rs  stream.rs
ipctest/: Cargo.toml
ipctest/src/: main.rs
server/: Cargo.toml
server/src/: lib.rs  server.rs
