[package]
name = "audioipc-client"
version = "0.4.0"
authors = [
        "Matthew Gregan <kinetik@flim.org>",
        "Dan Glastonbury <dan.glastonbury@gmail.com>"
        ]
description = "Cubeb Backend for talking to remote cubeb server."
edition = "2018"

[dependencies]
audio_thread_priority = "0.22"
audioipc = { path="../audioipc" }
cubeb-backend = "0.6.0"
futures = { version = "0.3.4", default-features = false, features = ["thread-pool"] }
futures-util = "0.3.4"
log = "0.4"
tokio = "0.2.17"
